Folder restructure and creation of new components

--- a/client/Public/index.html
+++ b/client/Public/index.html
@@ -3,7 +3,9 @@
 
    <head>
       <meta charset = "UTF-8">
-      <title>Post-It App</title>
+      <title>
+          Post-It App
+      </title>
    </head>
 
    <body>
