--- a/client/app/js/index.html
+++ b/client/app/js/index.html
@@ -6,16 +6,13 @@
     <title>React App</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div id = "app"></div>
-            </div>
-        </div>
-    </div>
-
-    <script src = "bundle.js"></script>
+  <div id = "app"></div>
+   <!-- <script src ="jquery-3.2.1.js"></script>
+  <script src ="bootstrap.js"></script>  -->
+  <script src = "bundle.js"></script>
 </body>
 </html>
